fix: global img height auto to resolve unresponsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a {
 
 img {
     max-width: 100%;
+    height: auto;
     display: block;
 }
 
